tweak settings and urls to avoid 403 errors jumping between subdomains in local dev

--- a/cms/templates/cms/dashboard.html
+++ b/cms/templates/cms/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "cms/base_cms.html" %}
 {% block title %}Dashboard | {{ request.tenant.name }}{% endblock %}
 
 {% block content %}
