--- a/templates/base.html
+++ b/templates/base.html
@@ -12,27 +12,35 @@
 <body class="marketing-site"> 
     <nav class="navbar navbar-expand-lg sticky-top border-bottom bg-white">
         <div class="container">
-            <a class="navbar-brand fw-bold" href="{% url 'public_marketing:landing' %}">
-                Pillar & Post
-            </a>
+            {# Logo logic #}
+            {% if request.tenant.schema_name == 'public' %}
+                <a class="navbar-brand fw-bold" href="{% url 'public_marketing:landing' %}">Pillar & Post</a>
+            {% else %}
+                <a class="navbar-brand fw-bold" href="/">Pillar & Post</a>
+            {% endif %}
             
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'public_marketing:template_select' %}">Templates</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'public_marketing:about' %}">About</a>
-                    </li>
-                    <li class="nav-item ms-lg-3">
-                        {% if request.tenant.schema_name == 'public' %}
-                            {# On public site: point them to the Portal Finder to find their company link #}
+                    
+                    {% if request.tenant.schema_name == 'public' %}
+                        {# PUBLIC LINKS (Uses namespace) #}
+                        <li class="nav-item"><a class="nav-link" href="{% url 'public_marketing:about' %}">About</a></li>
+                        <li class="nav-item ms-lg-3">
                             <a class="btn btn-primary btn-sm px-4" href="{% url 'public_marketing:portal_finder' %}">Login</a>
+                        </li>
+                    {% else %}
+                        {# TENANT LINKS (No namespace) #}
+                        {% if user.is_authenticated %}
+                            <li class="nav-item">
+                                <a class="btn btn-outline-danger btn-sm px-4" href="{% url 'tenant_logout' %}">Logout</a>
+                            </li>
                         {% else %}
-                            {# On a tenant subdomain: point them to the direct login page #}
-                            <a class="btn btn-primary btn-sm px-4" href="{% url 'public_marketing:tenant_login' %}">Login</a>
+                            <li class="nav-item">
+                                <a class="btn btn-primary btn-sm px-4" href="{% url 'tenant_login' %}">Login</a>
+                            </li>
                         {% endif %}
-                    </li>
+                    {% endif %}
+                    
                 </ul>
             </div>
         </div>
